# SpaceshipWarriorCombatED

./: .gitignore  .travis.yml  CMakeLists.txt  CMakelists.txt  Makefile  README.md  conanfile.txt
Error/: Error.cpp  Error.hpp
Game/: AGame.cpp  AGame.hpp  IGame.hpp
Game/Enemy/: AEnemy.cpp  AEnemy.hpp  IEnemy.hpp
Game/Enemy/Rusher/: Rusher.cpp  Rusher.hpp  RusherSystem.cpp  RusherSystem.hpp
Game/Enemy/Shooter/: Shooter.cpp  Shooter.hpp  ShooterSystem.cpp  ShooterSystem.hpp  shooterComponent.hpp
Game/Enemy/lib/libRusher.so.dSYM/Contents/: Info.plist
Game/Object/: AObjet.hpp  IObjet.hpp
Game/Object/Random/: Asteroid.cpp  Asteroid.hpp  RandomSystem.cpp  RandomSystem.hpp
Game/Object/Random/lib/libAsteroid.so.dSYM/Contents/: Info.plist
Game/Object/Wall/: Wall.cpp  Wall.hpp  WallSystem.cpp  WallSystem.hpp  wallComponent.hpp
Game/Object/Wall/lib/libWall.so.dSYM/Contents/: Info.plist
Game/Player/: IPlayer.hpp  Player.cpp  Player.hpp
Game/Rtype/: Rtype.cpp  Rtype.hpp  main.cpp
GameEngine/: ASystem.hpp  ComponentArray.hpp  ComponentManager.hpp  ECS.hpp  EntityManager.cpp  EntityManager.hpp  GameEngine.cpp  GameEngine.hpp  IComponentArray.hpp  SystemManager.hpp
GameEngine/Component/: boundingBox.hpp  destroyable.hpp  effect.hpp  event.hpp  fromPlayer.hpp  life.hpp  player.hpp  playerComponent.hpp  rendering.hpp  speed.hpp  stats.hpp
GameEngine/Display/: ADisplay.cpp  ADisplay.hpp  IDisplay.hpp
GameEngine/System/: Collision.cpp  Collision.hpp  DestroyEntity.cpp  DestroyEntity.hpp  Input.cpp  Input.hpp  Physic.cpp  Physic.hpp  Render.cpp  Render.hpp
Loader/: Loader.cpp  Loader.hpp
Rtype/: Rtype.cpp  Rtype.hpp  main.cpp
Sfml/: Sfml.cpp  Sfml.hpp
Sfml/Assets/: AAsset.cpp  AAsset.hpp  AssetsFactory.cpp  AssetsFactory.hpp  Enemy.cpp  Enemy.hpp  IAsset.hpp  Object.hpp  Player0.cpp  Player0.hpp  Player1.cpp  Player1.hpp  Player2.cpp  Player2.hpp  Player3.cpp  Player3.hpp  PlayerDie.cpp  PlayerDie.hpp  PlayerShoot0.cpp  PlayerShoot0.hpp  PlayerShoot1.cpp  PlayerShoot1.hpp  State.hpp  Type.hpp
ci/: deploy.sh
client/: Client.cpp  Client.hpp  Makefile  main.cpp
client/archive/: Client2.cpp  Client2.hpp
client/include/: Client.hpp
client/include/network/: NetworkConfig.hpp  NetworkManager.hpp
client/include/network/player/: Player.hpp
client/src/: Client.cpp  main.cpp
client/src/network/: NetworkConfig.cpp  NetworkManager.cpp
client/src/network/player/: Player.cpp
doc/: AssetsFactory.drawio  GameEngine  RType.drawio  heritage.drawio  portocol.txt
lib/udp/: Makefile
lib/udp/include/: Basic.hpp  Packet.hpp  Protocol.hpp  UDP.hpp
lib/udp/src/: Packet.cpp  UDP.cpp
lib/udp/tests/: udp_tests.cpp
server/: Makefile  README.md  Server.hpp  main.cpp  r-type_client  r-type_server
server/include/: Games.hpp  Lobby.hpp  Server.hpp  UDP.hpp
server/include/client/: Client.hpp  ClientManager.hpp
server/include/room/: Room.hpp  RoomManager.hpp
server/lib/connection/include/: Connection.hpp  ConnectionInfo.hpp  ConnectionLinux.hpp
server/src/: Main.cpp  Server.cpp  UDP.cpp  main.cpp
server/src/client/: Client.cpp  ClientManager.cpp
server/src/room/: Room.cpp  RoomManager.cpp
tests/: SystemTests.cpp  SystemTests.hpp  componentTests.hpp
